2006-11-05  Carlos Garnacho  <carlosg@gnome.org>

	* Release 2.15.6

2006-11-05  Carlos Garnacho  <carlosg@gnome.org>

        * address-list.c (popup_menu_create): fix crash. #370686

2006-11-04  Carlos Garnacho  <carlosg@gnome.org>

	* ifaces-list.c, locations-combo.c, network-locations.c: plug a bunch
	of leaks.

2006-09-30  Carlos Garnacho  <carlosg@gnome.org>

	* Release 2.15.5

2006-09-22  Jani Monoses  <jani.monoses@gmail.com>

	* network-locations.c: do not include libgnomeui headers, define
	GNOME_DOT_GNOME.

2006-09-08  Carlos Garnacho  <carlosg@gnome.org>

	* network-locations.c: do not throw a critical warning if hostname or
	domainname are NULL (although if hostname is NULL, something is very
	broken...)

2006-09-07  Carlos Garnacho  <carlosg@gnome.org>

	* Release 2.15.4

2006-09-07  Carlos Garnacho  <carlosg@gnome.org>

	* network-tool.c, ifaces-list.[ch]: show the interface name in the GUI
	when there are more than 1 interface of the same type.

2006-09-07  Carlos Garnacho  <carlosg@gnome.org>

	* locations-combo.c: set the last selected profile as the default name
	in the "save location" dialog, plus some wording improvements and
	other miscellaneous fixes.

2006-09-04  Carlos Garnacho  <carlosg@gnome.org>

	* Release 2.15.3

2006-09-04  Carlos Garnacho  <carlosg@gnome.org>

	* main.c (init_standalone_dialog) (main): fix -c and -t command line
	parameters.

2006-09-04  Carlos Garnacho  <carlosg@gnome.org>

	* network-locations.c: end the plip properties array with NULL.

2006-08-29  Carlos Garnacho  <carlosg@gnome.org>

	* locations-combo.c (on_combo_changed): do not unref the model, leads
	to early finalization.
	(select_matching_profile): separated from fill_model().
	(on_add_button_clicked) (gst_locations_combo_constructor)
	(gst_locations_combo_changed): use select_matching_profile() there.
	(fill_model): simplified.
	* network-locations.c (concatenate_aliases) (save_hosts_config): do
	not free those GList elements, we do not own them.