@@ -1,3 +1,12 @@
+2006-11-17  Carlos Garnacho  <carlosg@gnome.org>
+
+	* callbacks.[ch] (on_connection_cancel_clicked)
+	(on_connection_ok_clicked) (on_connection_dialog_close): rename and
+	make private.
+	(on_connection_response): added, use this to hadle configuration
+	dialog response.
+	* main.c: use on_connection_response.
+
 2006-11-05  Carlos Garnacho  <carlosg@gnome.org>
 
 	* Release 2.15.6
